# tsttr

./: Cargo.toml  Dockerfile  README.md  crosscompile.sh
src/: autostart.rs  common.rs  config.rs  event.rs  hotkey.rs  main.rs  tray.rs  window.rs
