[package]
name = "tsttr"
version = "0.2.0"
authors = ["Michael Borejdo <mib@electronic-minds.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.4"
lazy_static = "1.4"
config = { version = "0.10", default-features=false, features = ['yaml'] }
dirs = "2.0"
regex = "1.3"
serde = { version = "1.0", features = ['derive'] }

[dependencies.winapi]
version = "0.3"
features = ["winuser", "wingdi", "libloaderapi", "errhandlingapi", "shellapi", "winreg"]

[patch.crates-io]
lexical-core = {git = 'https://github.com/Gelbpunkt/rust-lexical', branch = 'fix-warnings-and-update-deps'}